# Algorithms

./: .gitignore  .pre-commit-config.yaml  A_Star_Algorithm.py  README.md  environment.yml  pyproject.toml
Arrays/: binary_search.py  bubble_sort.py  counting_sort.py  insertion_sort.py  linear_search.py  merge_sort.py  quick_sort.py  radix_sort.py  selection_sort.py
Other_Algos/: euclidean_algorithm.py  huffman_coding.py
Searching/: binary_search.py  interpolation_search.py  jump_search.py  linear_search.py
Shortest_Path/: dijkstra.py
Sorting/: bubble_sort.py  insertion_sort.py
test/: test_binary_search.py  test_interpolation_search.py  test_jump_search.py  test_linear_search.py  test_search.py  test_sort.py
tests/: test_array.py  test_other_algos.py
