[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.12"
mypy_path = "."
strict = true
# Unreachable blocks have been an issue when compiling mypyc, let's try to avoid 'em in the first place.
warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[project]
name = "Algorithms"
description = "Different Algorithm implementation in Python"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Aditya Gupta" }]

[project.optional-dependencies]
black = ["black==24.8.0"]
mypy = ["mypy==1.11.2"]
