[project]
name = "Algorithms"
description = "Different Algorithm implementation in Python"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Aditya Gupta" }]

[project.optional-dependencies]
black = ["black==24.8.0"]
mypy = ["mypy==1.11.2"]
pytest = ["pytest==8.3.3"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
mypy_path = "."
strict = true
warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cache-clear --full-trace"
testpaths = ["tests"]
