[project]
name = "Algorithms"
description = "Different Algorithm implementation in Python"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Aditya Gupta" }]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -xl --cache-clear --color=yes"
testpaths = ["tests"]
